force-app/main/default/objects/Bonus__c/Bonus__c.object-meta.xml
<CustomObject>
    <description>Entry for Bonus</description>
    <label>Bonus</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Bonus ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>