force-app/main/default/objects/Bonus__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The bonus end date.</description>
    <inlineHelpText>The bonus end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>