force-app/main/default/objects/Bonus__c/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the payouts has been processed with the batch</description>
    <inlineHelpText>When checked, the payouts has been processed with the batch</inlineHelpText>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>