force-app/main/default/objects/Bonus__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The bonus start date.</description>
    <inlineHelpText>The bonus start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>